--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -6,5 +6,12 @@
       "dependsOn": [],
       "customAuth": false
     }
+  },
+  "function": {
+    "test58aa5f85": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
   }
 }
